Connected to db

--- a/WebImmoApp/views/Homepage.ejs
+++ b/WebImmoApp/views/Homepage.ejs
@@ -44,15 +44,17 @@
 
         <div class="homepage__RightButtons">
             <button class=" homepage__RightButton " type="button" onclick="location.href='/users/register'">Register</button>
+            <button class=" homepage__RightButton " type="button" onclick="location.href='/users/login'">Login</button>
 
             <button class="homepage__RightButton"> My WebImmoFree</button>
             <button class="homepage__RightButton"> Publish my ad </button>
 
+            <!--
             <div class="RightButtons__login">
                 <input class="loginInput" type="text" placeholder="email">
                 <input class="loginInput" type="text" placeholder="Password">
                 <a href="/"> Mot de passe oublié ?</a>
-            </div>
+            </div> --->
         </div>
 
         <div class="homepage__ResearchBar">
