--- a/WebImmoApp/views/register.ejs
+++ b/WebImmoApp/views/register.ejs
@@ -1,25 +1,25 @@
 <div class="RegisterPage">
-<form>
+<form action="/users/register" method="POST">
     <div class="RegisterPage__firstLine">
         <label for="name">Title*: </label>
-        <input class="inputBox" name="title" type="text" value="">
+        <input class="inputBox" name="title" type="text" value="" required>
         <label for="name">Surname*: </label>
-        <input class="inputBox" name="surname" type="text" value="">
+        <input class="inputBox" name="surname" type="text" value="" required>
         <label for="name">Name*: </label>
-        <input class="inputBox" name="name" type="text" value="">
+        <input class="inputBox" name="name" type="text" value="" required>
         <label for="name">Phone*: </label>
-        <input class="inputBox" name="phone" type="text" value="">
+        <input class="inputBox" name="phone" type="text" value="" required>
     </div>
 
     <div class="RegisterPage__secondLine">
         <label for="name">email*: </label>
-        <input class="inputBox" name="email" type="text" value="">
+        <input class="inputBox" name="email" type="text" value="" required>
         <label for="name">Adress*: </label>
-        <input class="inputBox" name="address" type="text" value="">
+        <input class="inputBox" name="address" type="text" value="" required>
         <label for="name">Postcode*: </label>
-        <input class="inputBox" name="postcode" type="text" value="">
+        <input class="inputBox" name="postcode" type="text" value="" required> 
         <label for="name">Municipality*: </label>
-        <input class="inputBox" name="municipality" type="text" value="">
+        <input class="inputBox" name="municipality" type="text" value="" required>
     </div>
 
     <div class="RegisterPage__thirdLine">
