Added login functionality

--- a/WebImmoApp/views/register.ejs
+++ b/WebImmoApp/views/register.ejs
@@ -14,6 +14,10 @@
     <div class="RegisterPage__secondLine">
         <label for="name">email*: </label>
         <input class="inputBox" name="email" type="text" value="" required>
+        <label for="name">password*: </label>
+        <input class="inputBox" name="password" type="password" value="" required>
+        <label for="name">Confirm password*: </label>
+        <input class="inputBox" name="password2" type="password" value="" required>
         <label for="name">Adress*: </label>
         <input class="inputBox" name="address" type="text" value="" required>
         <label for="name">Postcode*: </label>
