--- a/WebImmoApp/views/dashboard.ejs
+++ b/WebImmoApp/views/dashboard.ejs
@@ -1,3 +1,76 @@
-<h1 class="mt-4">Dashboard</h1>
-<p class="lead mb-3">Welcome <%= name %></p>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Document</title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
+</head>
+<body>
+    
+<h1 class="mt-4">My profile</h1>
+
+<div class="registerContainer">
+    <div class="row">
+        <div class="block">
+            First Name : <%= user.name%>
+        </div>
+
+        <div class="block">
+            Name : <%= user.surname%>
+
+        </div>
+    </div>
+
+    <div class="secondLine">
+        
+        <div class="email">
+            e-mail : <%= user.email%>
+        </div>
+
+        <div class="adress">
+            Address : <%= user.address%>
+        </div>
+    </div>
+
+    <div class="buttonLine">
+        <button onclick="window.location.href='/users/editProfile';" style="background-color: green; color : azure;">Modify my profile</button>
+    </div>
+</div>
+
+
+<div class ="container">
+    <h1 class ="mb-4">My ads</h1>
+    <a href="/articles/new" class="btn btn-success"> New article </a>
+
+    <!--- Show each article-->
+    <% articles.forEach(article => { %>
+        <div class="card mt-4">
+            <div class= "card-body">
+                <h4 class="card-title"><%= article.housetype %></h4>
+                    <div class="card-text mb-2">
+                        Price : <%= article.price %> €
+                    </div>
+
+                    <div class="card-text mb-2">
+                        Number of rooms : <%= article.nrRooms %>
+                    </div>
+
+                    <div class="card-text mb-2">
+                        Postal code : <%= article.postalCode %>
+                    </div>
+                
+            </div>
+        </div>
+   <% }) %>
+</div>
+
+<!--
 <a href="/users/logout" class="btn btn-secondary">Logout</a>
+     -->
+
+     <a href="/" class="btn btn-success"> Homepage </a>
+</body>
+</html>
+
