Modified homepage buttons  css

--- a/WebImmoApp/views/Homepage.ejs
+++ b/WebImmoApp/views/Homepage.ejs
@@ -28,12 +28,12 @@
 
         <div class="homepage__MiddleButtons">
             <div class="MiddleButtons_FirstRow">
-                <button class="MiddleFirstRowButton" onclick="window.location.href='/request';"> Your
+                <button class="MiddleFirstRowButton button" onclick="window.location.href='/request';"> Your
                     Request</button>
-                <button class="MiddleFirstRowButton"> Private To Private</button>
-                <button class="MiddleFirstRowButton" onclick="window.location.href='/estimate';"> Estimate by
+                <button class="MiddleFirstRowButton button"> Private To Private</button>
+                <button class="MiddleFirstRowButton button" onclick="window.location.href='/estimate';"> Estimate by
                     Agency</button>
-                <button class="MiddleFirstRowButton"> Platform</button>
+                <button class="MiddleFirstRowButton button"> Platform</button>
             </div>
 
             <div class="MiddleButtons_SecondRow">
@@ -45,8 +45,8 @@
             </div>
 
             <div class="MiddleButtons_ThirdRow">
-                <button class="MiddleThirdRowButton"> For Sale</button>
-                <button class="MiddleThirdRowButton"> For Rent</button>
+                <button class="MiddleThirdRowButton button"> For Sale</button>
+                <button class="MiddleThirdRowButton button"> For Rent</button>
             </div>
 
         </div>
