--- a/WebImmoApp/views/articles/show.ejs
+++ b/WebImmoApp/views/articles/show.ejs
@@ -12,13 +12,20 @@
 
 <body>
 
-    <div class="container">
-        <h1 class="mb-1"> <%= article.housetype%></h1>
-        <div class="text-muted mb-2"><%= article.createdAt%></div>
-        <img src="<%= article.image%>"">
+    <div class="card" style="width: 50rem;">
+        <div class="card-body">
+            <h1 class="mb-1"> <%= article.housetype%></h1>
+            <div class="text-muted mb-2"><%= article.createdAt%></div>
+            <img class="card-img-top" src="<%= article.image%>"">
+
+            <h5 class=" card-title">Card title</h5>
+            <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's
+                content.</p>
+
+            <a href="/" class="btn btn-secondary">Homepage</a>
+            <a href="/articles/edit/" class="btn btn-info">edit</a>
+        </div>
     </div>
-    <a href="/" class="btn btn-secondary">Homepage</a>
-        <a href="/articles/edit/" class="btn btn-info">edit</a>
 
 
 </body>
